--- a/backend-saduxml/package.json
+++ b/backend-saduxml/package.json
@@ -16,7 +16,8 @@
     "mysql2": "^3.15.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^3.1.10",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.3"
