--- a/backend-saduxml/config/config.json
+++ b/backend-saduxml/config/config.json
@@ -1,23 +1,26 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "saduxml",
+    "password": "root123",
+    "database": "saduxml-development",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 3312
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "saduxml",
+    "password": "root123",
+    "database": "saduxml-development",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 3312
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "saduxml",
+    "password": "root123",
+    "database": "saduxml-production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 3312
   }
 }
